# fastrepl

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  index.rst  mint.json  requirements.txt
docs/advance/: human_eval.mdx  meta_eval.mdx
docs/advanced_usage/: dataset_management.md
docs/basic_usage/: dataset_loading.md  meta_eval.md  model_graded_eval.md
docs/cookbook/: embedchain.mdx
docs/get_started/: agent_evaluation.mdx  dataset_generation.mdx  general_evaluation.mdx  installation.mdx  introduction.mdx  quickstart.mdx  rag_evaluation.mdx
docs/getting_started/: concepts.md  design_goals.md  detailed_tutorial.ipynb  env.md  general_guideline.md  quickstart.ipynb
docs/guides/: dataset_generation.ipynb  dealing_with_bias.mdx  human_eval.ipynb  llama_index_pg_great_work.ipynb  meta_eval.md  meta_eval.mdx  model_graded_eval.md  model_graded_eval.mdx
docs/integration/: embedchain.mdx  langfuse.mdx  llama_index.mdx  promptlayer.mdx
docs/miscellaneous/: caching.md  dealing_with_bias.mdx  observability.md  telemetry.mdx  warnings_and_errors.md  warnings_and_errors.mdx
examples/: anthropic_rlhf.ipynb  basic.ipynb  llama_index.ipynb  promptlayer.ipynb  question_generation.ipynb  rag.ipynb  readme.ipynb  repl.ipynb  yelp_review.ipynb  yelp_review_basic.ipynb  yelp_review_classification.ipynb  yelp_review_grading.ipynb  yelp_review_grading_gpt_vs_mistral.ipynb
exp/: embedchain.ipynb  kappa.ipynb  langfuse.ipynb  pg_essay_questions.ipynb  promptlayer.ipynb  test_suites_vellum.ipynb  yelp_review_grading.ipynb
fastrepl/: __init__.py  analyze.py  dataset.py  errors.py  generate.py  llama_index.py  llm.py  polish.py  pytest_plugin.py  runner.py  telemetry.py  test_utils.py  unittests_class.py  warnings.py
fastrepl/eval/: __init__.py  base.py  evaluator.py
fastrepl/loop/: __init__.py  evaluator.py  repl.py
fastrepl/repl/: __init__.py  context.py  polish.py
fastrepl/run/: __init__.py  cache.py  llm.py
fastrepl/runner/: __init__.py  base.py  custom.py  evaluator.py  generator.py  (+2 more)
new_docs/: README.md  mint.json
(+54 files in other folders)
