[tool.poetry]
name = "fastrepl"
version = "0.0.17"
description = "Fast Run-Eval-Polish Loop for LLM App"
authors = ["yujonglee <yujonglee@repllabs.ai>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openai = "^0.27.8"
cohere = "^4.20.2"
tiktoken = "^0.4.0"
litellm = "^0.2.5"
evaluate = "^0.4.0"
cuid2 = "^2.0.0"
graphviz = "^0.20.1"
rich = {extras = ["jupyter"], version = "^13.5.2"}
iprogress = "^0.4"
ipywidgets = "^8.1.0"
scikit-learn = "^1.3.0"
backoff = "^2.2.1"
statsmodels = "^0.14.0"
lazy-imports = "^0.3.1"
sentence-transformers = { version = "^2.2.2", optional = true }
transformers = { version = "^4.31.0", optional = true }
torch = { version = ">=2.0.0, !=2.0.1", optional = true }
ragas = { version = ">=0.0.16", optional = true }
datasets = { version = "^2.14.4", optional = true }
httpx = ">=0.24.0"
wrapt-timeout-decorator = "^1.4.0"
langfuse = { version = ">=1.0.35", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
black = "^23.9.0"
python-dotenv = "^1.0.0"
html2text = "^2020.1.16"
nbconvert = "^7.7.3"
ipykernel = "^6.25.2"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-xdist = "^3.3.1"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.24.0"

[tool.coverage.run]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_also = [
    "import *",
    "@overload",
    "@abstractmethod",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.mypy]
exclude = [".venv"]
explicit_package_bases = "True"
ignore_missing_imports = "True"
enable_incomplete_feature = "Unpack"

[tool.poetry.extras]
rag = ["ragas", "datasets"]
sas = ["sentence-transformers", "transformers", "torch"]

[tool.pytest.ini_options]
markers = ["todo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://github.com/pytest-dev/pytest/issues/10590#issuecomment-1354553287
[tool.poetry.plugins.pytest11]
fastrepl = "fastrepl.pytest_plugin"
